re PR c++/25364 (ICE with function pointer as template parameter)

PR c++/25364
	* semantics.c (finish_qualified_id_expr): Call mark_used.

	PR c++/25364
	* g++.dg/template/call4.C: New test.

From-SVN: r108971